// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotSheet Export Test Custom Tree Export Test should export correct data in grid mode for custom row cell 1`] = `
Array [
  "		类型	家具	家具
",
  "层级1	自定义节点 a-1-1	指标1	桌子	椅子
",
  "层级1	自定义节点 a-1-1	指标1	13	11
",
  "层级1	自定义节点 a-1-1	指标2	2	8
",
  "层级1	自定义节点 a-1-2			
",
  "层级2				",
]
`;

exports[`PivotSheet Export Test Custom Tree Export Test should export correct data in tree mode for custom row cell 1`] = `
Array [
  "		类型	家具	家具
",
  "		层级1/层级2/数值	桌子	椅子
",
  "层级1				
",
  "层级1	自定义节点 a-1-1			
",
  "层级1	自定义节点 a-1-1	指标1	13	11
",
  "层级1	自定义节点 a-1-1	指标2	2	8
",
  "层级1	自定义节点 a-1-2			
",
  "层级2				",
]
`;

exports[`PivotSheet Export Test Custom Tree Export Test should export correct data in tree mode for custom row cell and custom corner text 1`] = `
Array [
  "		类型	家具	家具
",
  "		自定义	桌子	椅子
",
  "层级1				
",
  "层级1	自定义节点 a-1-1			
",
  "层级1	自定义节点 a-1-1	指标1	13	11
",
  "层级1	自定义节点 a-1-1	指标2	2	8
",
  "层级1	自定义节点 a-1-2			
",
  "层级2				",
]
`;

exports[`PivotSheet Export Test should export correct $$extra$$ field name 1`] = `
Array [
  "type",
  "sub_type",
  "数值",
  "数值",
  "数值",
  "数值",
  "数值",
  "数值",
  "数值",
  "数值
",
]
`;

exports[`TableSheet Export Test should export correct data with no series number 1`] = `
Array [
  "province	city	type	sub_type	number
",
  "浙江省	杭州市	家具	桌子	7789
",
  "浙江省	绍兴市	家具	桌子	2367
",
  "浙江省	宁波市	家具	桌子	3877
",
  "浙江省	舟山市	家具	桌子	4342
",
  "浙江省	杭州市	家具	沙发	5343
",
  "浙江省	绍兴市	家具	沙发	632
",
  "浙江省	宁波市	家具	沙发	7234
",
  "浙江省	舟山市	家具	沙发	834
",
  "浙江省	杭州市	办公用品	笔	945
",
  "浙江省	绍兴市	办公用品	笔	1304
",
  "浙江省	宁波市	办公用品	笔	1145
",
  "浙江省	舟山市	办公用品	笔	1432
",
  "浙江省	杭州市	办公用品	纸张	1343
",
  "浙江省	绍兴市	办公用品	纸张	1354
",
  "浙江省	宁波市	办公用品	纸张	1523
",
  "浙江省	舟山市	办公用品	纸张	1634
",
  "四川省	成都市	家具	桌子	1723
",
  "四川省	绵阳市	家具	桌子	1822
",
  "四川省	南充市	家具	桌子	1943
",
  "四川省	乐山市	家具	桌子	2330
",
  "四川省	成都市	家具	沙发	2451
",
  "四川省	绵阳市	家具	沙发	2244
",
  "四川省	南充市	家具	沙发	2333
",
  "四川省	乐山市	家具	沙发	2445
",
  "四川省	成都市	办公用品	笔	2335
",
  "四川省	绵阳市	办公用品	笔	245
",
  "四川省	南充市	办公用品	笔	2457
",
  "四川省	乐山市	办公用品	笔	2458
",
  "四川省	成都市	办公用品	纸张	4004
",
  "四川省	绵阳市	办公用品	纸张	3077
",
  "四川省	南充市	办公用品	纸张	3551
",
  "四川省	乐山市	办公用品	纸张	352
",
  "		家具	桌子	26193
",
  "		家具		49709
",
  "		家具	沙发	23516
",
  "		办公用品		29159
",
  "		办公用品	笔	12321
",
  "		办公用品	纸张	16838
",
  "浙江省		家具	桌子	18375
",
  "浙江省		家具	沙发	14043
",
  "浙江省		办公用品	笔	4826
",
  "浙江省		办公用品	纸张	5854
",
  "四川省		家具	桌子	7818
",
  "四川省		家具	沙发	9473
",
  "四川省		办公用品	笔	7495
",
  "四川省		办公用品	纸张	10984
",
  "浙江省	杭州市	家具		13132
",
  "浙江省	杭州市	办公用品		2288
",
  "浙江省	杭州市			15420
",
  "浙江省	绍兴市	家具		2999
",
  "浙江省	绍兴市	办公用品		2658
",
  "浙江省	绍兴市			5657
",
  "浙江省	宁波市	家具		11111
",
  "浙江省	宁波市	办公用品		2668
",
  "浙江省	宁波市			13779
",
  "浙江省	舟山市	家具		5176
",
  "浙江省	舟山市	办公用品		3066
",
  "浙江省	舟山市			8242
",
  "四川省	成都市	家具		4174
",
  "四川省	成都市	办公用品		6339
",
  "四川省	成都市			10513
",
  "四川省	绵阳市	家具		4066
",
  "四川省	绵阳市	办公用品		3322
",
  "四川省	绵阳市			7388
",
  "四川省	南充市	家具		4276
",
  "四川省	南充市	办公用品		6008
",
  "四川省	南充市			10284
",
  "四川省	乐山市	家具		4775
",
  "四川省	乐山市	办公用品		2810
",
  "四川省	乐山市			7585
",
  "浙江省		家具		32418
",
  "浙江省		办公用品		10680
",
  "浙江省				43098
",
  "四川省		家具		17291
",
  "四川省		办公用品		18479
",
  "四川省				35770
",
  "				78868",
]
`;

exports[`TableSheet Export Test should export correct data with no series number 2`] = `
Array [
  "province",
  "city",
  "type",
  "sub_type",
  "number
",
]
`;

exports[`TableSheet Export Test should export correct data with series number 1`] = `
Array [
  "序号	province	city	产品类型	sub_type	number
",
  "1	浙江省	杭州市	家具	桌子	7789
",
  "2	浙江省	绍兴市	家具	桌子	2367
",
  "3	浙江省	宁波市	家具	桌子	3877
",
  "4	浙江省	舟山市	家具	桌子	4342
",
  "5	浙江省	杭州市	家具	沙发	5343
",
  "6	浙江省	绍兴市	家具	沙发	632
",
  "7	浙江省	宁波市	家具	沙发	7234
",
  "8	浙江省	舟山市	家具	沙发	834
",
  "9	浙江省	杭州市	办公用品	笔	945
",
  "10	浙江省	绍兴市	办公用品	笔	1304
",
  "11	浙江省	宁波市	办公用品	笔	1145
",
  "12	浙江省	舟山市	办公用品	笔	1432
",
  "13	浙江省	杭州市	办公用品	纸张	1343
",
  "14	浙江省	绍兴市	办公用品	纸张	1354
",
  "15	浙江省	宁波市	办公用品	纸张	1523
",
  "16	浙江省	舟山市	办公用品	纸张	1634
",
  "17	四川省	成都市	家具	桌子	1723
",
  "18	四川省	绵阳市	家具	桌子	1822
",
  "19	四川省	南充市	家具	桌子	1943
",
  "20	四川省	乐山市	家具	桌子	2330
",
  "21	四川省	成都市	家具	沙发	2451
",
  "22	四川省	绵阳市	家具	沙发	2244
",
  "23	四川省	南充市	家具	沙发	2333
",
  "24	四川省	乐山市	家具	沙发	2445
",
  "25	四川省	成都市	办公用品	笔	2335
",
  "26	四川省	绵阳市	办公用品	笔	245
",
  "27	四川省	南充市	办公用品	笔	2457
",
  "28	四川省	乐山市	办公用品	笔	2458
",
  "29	四川省	成都市	办公用品	纸张	4004
",
  "30	四川省	绵阳市	办公用品	纸张	3077
",
  "31	四川省	南充市	办公用品	纸张	3551
",
  "32	四川省	乐山市	办公用品	纸张	352
",
  "33			家具	桌子	26193
",
  "34			家具		49709
",
  "35			家具	沙发	23516
",
  "36			办公用品		29159
",
  "37			办公用品	笔	12321
",
  "38			办公用品	纸张	16838
",
  "39	浙江省		家具	桌子	18375
",
  "40	浙江省		家具	沙发	14043
",
  "41	浙江省		办公用品	笔	4826
",
  "42	浙江省		办公用品	纸张	5854
",
  "43	四川省		家具	桌子	7818
",
  "44	四川省		家具	沙发	9473
",
  "45	四川省		办公用品	笔	7495
",
  "46	四川省		办公用品	纸张	10984
",
  "47	浙江省	杭州市	家具		13132
",
  "48	浙江省	杭州市	办公用品		2288
",
  "49	浙江省	杭州市			15420
",
  "50	浙江省	绍兴市	家具		2999
",
  "51	浙江省	绍兴市	办公用品		2658
",
  "52	浙江省	绍兴市			5657
",
  "53	浙江省	宁波市	家具		11111
",
  "54	浙江省	宁波市	办公用品		2668
",
  "55	浙江省	宁波市			13779
",
  "56	浙江省	舟山市	家具		5176
",
  "57	浙江省	舟山市	办公用品		3066
",
  "58	浙江省	舟山市			8242
",
  "59	四川省	成都市	家具		4174
",
  "60	四川省	成都市	办公用品		6339
",
  "61	四川省	成都市			10513
",
  "62	四川省	绵阳市	家具		4066
",
  "63	四川省	绵阳市	办公用品		3322
",
  "64	四川省	绵阳市			7388
",
  "65	四川省	南充市	家具		4276
",
  "66	四川省	南充市	办公用品		6008
",
  "67	四川省	南充市			10284
",
  "68	四川省	乐山市	家具		4775
",
  "69	四川省	乐山市	办公用品		2810
",
  "70	四川省	乐山市			7585
",
  "71	浙江省		家具		32418
",
  "72	浙江省		办公用品		10680
",
  "73	浙江省				43098
",
  "74	四川省		家具		17291
",
  "75	四川省		办公用品		18479
",
  "76	四川省				35770
",
  "77					78868",
]
`;

exports[`TableSheet Export Test should export correct data with series number 2`] = `
Array [
  "序号",
  "province",
  "city",
  "产品类型",
  "sub_type",
  "number
",
]
`;
